--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
           <a class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quos suscipit, neque veritatis doloremque iusto sit a perspiciatis quibusdam deleniti nulla veniam eligendi modi odio, amet autem consectetur eos placeat.Odio perspiciatis reiciendis quo numquam exercitationem quam natus optio obcaecati, corporis, quia eos possimus eius expedita excepturi soluta non quas dolore eveniet iure beatae nobis. Reprehenderit possimus vero quas voluptatem.</a>
         </div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
+      <img src="https://res.cloudinary.com/sehnsucht/image/upload/bo_15px_solid_rgb:000,c_crop,h_1253,q_auto,w_3304,x_0,y_550/v1584429877/cityscape/midtown_cloudy.png" class="img-fluid" alt="">
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section id="gallery" class="gallery-section bg-light">
+  <!-- Galleries Section -->
+  <section id="gallery" class="galleries-section bg-light">
     <div class="container">
 
       <h1 class="font-weight-light text-center mt-4 mb-0">Memories</h1>
