CSS adjustments for gallery

--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
           <a class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quos suscipit, neque veritatis doloremque iusto sit a perspiciatis quibusdam deleniti nulla veniam eligendi modi odio, amet autem consectetur eos placeat.Odio perspiciatis reiciendis quo numquam exercitationem quam natus optio obcaecati, corporis, quia eos possimus eius expedita excepturi soluta non quas dolore eveniet iure beatae nobis. Reprehenderit possimus vero quas voluptatem.</a>
         </div>
       </div>
-      <!-- <img src="https://res.cloudinary.com/sehnsucht/image/upload/bo_15px_solid_rgb:000,c_crop,h_1253,q_auto,w_3304,x_0,y_550/v1584429877/cityscape/midtown_cloudy.png" class="img-fluid" alt=""> -->
     </div>
   </section>
 
@@ -81,9 +80,9 @@
   <section id="gallery" class="galleries-section bg-light">
     <div class="container">
 
-      <h1 class="font-weight-light text-center mt-4 mb-0">Memories</h1>
+      <h1 class="font-weight-light text-center mt-0 mb-5 pt-5">Memories</h1>
 
-      <hr class="mt-2 mb-5">
+      <!-- <hr class="mt-0 mb-10"> -->
 
       <div class="row text-center text-lg-left">
 
@@ -148,6 +147,7 @@
           </a>
         </div>
       </div>
+      <hr class="mt-5 mb-0">
     </div>
   </section>
 
