removed the divs with hardcoded images.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">Anem[o]ia</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -74,7 +74,12 @@
                         who sleep in some of the same houses we do, who look up at the same moon, who breathe the same air, feel the same blood in their veins—and live in a completely different world.
                     </p>
                     <h2 class="text-white mb-4">Who am I</h2>
-                    <a class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quos suscipit, neque veritatis doloremque iusto sit a perspiciatis quibusdam deleniti nulla veniam eligendi modi odio, amet autem consectetur eos placeat.Odio perspiciatis reiciendis quo numquam exercitationem quam natus optio obcaecati, corporis, quia eos possimus eius expedita excepturi soluta non quas dolore eveniet iure beatae nobis. Reprehenderit possimus vero quas voluptatem.</a>
+                    <a class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quos
+                        suscipit, neque veritatis doloremque iusto sit a perspiciatis quibusdam deleniti nulla veniam
+                        eligendi modi odio, amet autem consectetur eos placeat.Odio perspiciatis reiciendis quo numquam
+                        exercitationem quam natus optio obcaecati, corporis, quia eos possimus eius expedita excepturi
+                        soluta non quas dolore eveniet iure beatae nobis. Reprehenderit possimus vero quas
+                        voluptatem.</a>
                 </div>
             </div>
         </div>
@@ -88,57 +93,11 @@
 
             <!-- <hr class="mt-0 mb-10"> -->
 
-            <div class="row">
+            <div class="row" id="mosaic">
 
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox">
-                        <img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="" class="zoom img-fluid">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox">
-                        <img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="" class="zoom img-fluid">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox">
-                        <img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="" class="zoom img-fluid">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox">
-                        <img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="" class="zoom img-fluid">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox">
-                        <img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="" class="zoom img-fluid">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox">
-                        <img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="" class="zoom img-fluid">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox">
-                        <img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="" class="zoom img-fluid">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox">
-                        <img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="" class="zoom img-fluid">
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                    <a href="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="fancybox">
-                        <img src="https://images.pexels.com/photos/62307/air-bubbles-diving-underwater-blow-62307.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="" class="zoom img-fluid">
-                    </a>
-                </div>
+                <hr class="mt-5 mb-0">
+
             </div>
-
-            <hr class="mt-5 mb-0">
-        </div>
     </section>
 
     <!-- Contact Section -->
