Changed the routes to match the folder name change.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
     <title>Anem[o]ia</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="lib/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Fancybox CSS -->
-    <link href="vendor/fancybox/css/jquery.fancybox.min.css" rel="stylesheet">
+    <link href="lib/fancybox/css/jquery.fancybox.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/anemoia.css" rel="stylesheet">
@@ -35,9 +33,7 @@
         <div class="container">
 
             <a class="navbar-brand js-scroll-trigger" href="#page-top">Anem[o]ia</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
             </button>
@@ -64,8 +60,7 @@
         <div class="container d-flex h-100 align-items-center">
             <div class="mx-auto text-center">
                 <h1 class="mx-auto my-0 text-uppercase">Anemoia</h1>
-                <h2 class="text-white-50 mx-auto mt-2 mb-5">“The past is a foreign country: they do things differently
-                    there.” –L.P. Hartley
+                <h2 class="text-white-50 mx-auto mt-2 mb-5">“The past is a foreign country: they do things differently there.” –L.P. Hartley
                 </h2>
                 <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
             </div>
@@ -78,11 +73,8 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2 class="text-white mb-4">What is Anemoia?</h2>
-                    <p class="text-white-50">Is the nostalgia for a time you’ve never known. Imagine stepping through
-                        the frame into a sepia-tinted haze, where you could sit on the side of the road and watch the
-                        locals passing by. Who lived and died before any of us arrived here,
-                        who sleep in some of the same houses we do, who look up at the same moon, who breathe the same
-                        air, feel the same blood in their veins—and live in a completely different world.
+                    <p class="text-white-50">Is the nostalgia for a time you’ve never known. Imagine stepping through the frame into a sepia-tinted haze, where you could sit on the side of the road and watch the locals passing by. Who lived and died before any of us arrived here,
+                        who sleep in some of the same houses we do, who look up at the same moon, who breathe the same air, feel the same blood in their veins—and live in a completely different world.
                     </p>
                     <h2 class="text-white mb-4">Who am I</h2>
                     <a class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quos
@@ -169,14 +161,14 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/jquery/jquery.min.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="lib/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Fancybox JS -->
-    <script src="vendor/fancybox/js/jquery.fancybox.min.js"></script>
+    <script src="lib/fancybox/js/jquery.fancybox.min.js"></script>
 
     <!-- Scripts for this template -->
     <script src="js/anemoia.js"></script>
